# LMBot

./: .gitmodules  CMakeLists.txt  README.md  lmbot.code-workspace  lmbot.toml.example
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  Main.cc
src/bot/: Authorizer.cc  Authorizer.h  Bot.cc  Bot.h  Keyboard.cc  Keyboard.h  LMBot.cc  LMBot.h
src/managers/: CallbackQuery.cc  CallbackQuery.h  ChatHelper.cc  ChatHelper.h  Command.cc  Command.h  InlineQuery.cc  InlineQuery.h  Manager.cc  Manager.h  Message.cc  Message.h  Modules.cc  Modules.h  Processor.cc  Processor.h
src/modules/: AnimationConverter.cc  AnimationConverter.h  CMakeLists.txt  ChatHelper.cc  ChatHelper.h  Module.cc  Module.h
src/modules/AnimationConverter/: AnimationConverter.cc  AnimationConverter.h
src/modules/HelloWorldModule/: HelloWorldModule.cc  HelloWorldModule.h
src/utils/: ConfigWrapper.cc  ConfigWrapper.h  DataBaseHelper.cc  DataBaseHelper.h  Logger.cc  Logger.h  Utilities.cc  Utilities.h  Version.h.in
src/vars/: BaseCommandsList.h  CommandsList.h
tools/cmake/: SubDirList.cmake
